# VulnerablePopulationsExplorer

./: flake.nix  package.json  pnpm-lock.yaml  process_data.py  pyproject.toml  synthpop.proto
src/: category_selector.svelte  legend.svelte  population_selector.svelte  range_selector.svelte  selection.js  temperature_trend.svelte
src/lib/components/ui/sheet/: index.ts  sheet-overlay.svelte
src/lib/components/ui/toggle-group/: toggle-group.svelte
src/pb/: load_data.js  pb.js  synthpop_pb.js
src/routes/: +page.js  +page.svelte
src/stores/: data.svelte.ts
static/: reprojected.nc
