[tool.poetry]
name = "dyme-vis"
version = "0.1.0"
description = ""
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rasterio = "^1.3.9"
xarray = "^2024.1.1"
geopandas = "^0.14.2"
pandas = "^2.2.0"
netcdf4 = "^1.6.5"
scipy = "^1.12.0"
bottleneck = "^1.3.7"
numbagg = "^0.7.1"
rioxarray = "^0.15.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
